// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchModule should return a request action 1`] = `
Object {
  "meta": Object {
    Symbol(API_REQUEST): true,
  },
  "payload": Object {
    "method": "GET",
    "url": "test://MOCK_MOD_DETAILS_URL/CS1010S",
  },
  "type": "FETCH_MODULE",
}
`;

exports[`fetchModuleList should return a request action 1`] = `
Object {
  "meta": Object {
    Symbol(API_REQUEST): true,
  },
  "payload": Object {
    "method": "GET",
    "url": "test://MOCK_MOD_LIST_URL",
  },
  "type": "FETCH_MODULE_LIST",
}
`;
